[package]
name = "infiniboot"
version = "0.1.0"
authors = ["Mike Leany"]
license = "MPL-2.0"
description = "The bootloader for the Aleph Operating System"
repository = "https://github.com/mikeleany/aleph-os"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="infiniboot_api"

[[bin]]
name = "infiniboot"
required-features = ["loader", "object"]

[features]
loader = ["object"]

[dependencies.object]
version = "0.23.0"
default-features = false
features = ["read_core", "elf"]
optional = true

[target.x86_64-unknown-uefi.dependencies]
uefi = { version = "0.8.0", features = ["logger"] }
rlibc = "1.0.0"
spin = "0.9.0"
log = "0.4.14"
